Update to deploy script